// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prints expected report for case: >3 browsers report 1`] = `
"|----------------------------------------------------------------------------------------------------------------------|
|                                         ▄ •▄       • ▌ ▄ ·.  ▄▄▄· ▄▄▄· ▄▄▄▄▄                                         |
|                                         █▌▄▌▪▪     ·██ ▐███▪▐█ ▄█▐█ ▀█ •██                                           |
|                                         ▐▀▀▄· ▄█▀▄ ▐█ ▌▐▌▐█· ██▀·▄█▀▀█  ▐█.▪                                         |
|                                         ▐█.█▌▐█▌.▐▌██ ██▌▐█▌▐█▪·•▐█ ▪▐▌ ▐█▌·                                         |
|                                         ·▀  ▀ ▀█▄▀▪▀▀  █▪▀▀▀.▀    ▀  ▀  ▀▀▀                                          |
|                                                                                                                      |
|                                         Copyright (c) 2023 Cameron McCormack                                         |
|----------------------------------------------------------------------------------------------------------------------|


Overall Summary: [43m[1mWARN[22m[49m
 - [43m[1mWARN[22m[49m: example/filepath/eg-file.css


Summary of all stylesheets:
########################################################################################################################
#                                                                                                                      #
#                                          [43m[1mWARN: example/filepath/eg-file.css[22m[49m                                          #
#                                                                                                                      #
########################################################################################################################
|----------------------------------------------------------------------------------------------------------------------|
|                                                                                                                      |
|                                                  High-level Summary                                                  |
|                                                                                                                      |
|----------------------------------------------------|------------|-----------------|---------|--------------|---------|
| Index                                              | compatible | partial-support | flagged | incompatible | unknown |
|----------------------------------------------------|------------|-----------------|---------|--------------|---------|
| chrome                                             |      [32m3[39m     |        [32m0[39m        |    [33m1[39m    |       [32m0[39m      |    [32m0[39m    |
| firefox                                            |      [32m4[39m     |        [32m0[39m        |    [32m0[39m    |       [32m0[39m      |    [32m0[39m    |
| samsunginternet_android                            |      [32m4[39m     |        [32m0[39m        |    [32m0[39m    |       [32m0[39m      |    [32m0[39m    |
| safari                                             |      [32m4[39m     |        [32m0[39m        |    [32m0[39m    |       [32m0[39m      |    [32m0[39m    |
| edge                                               |      [32m4[39m     |        [32m0[39m        |    [32m0[39m    |       [32m0[39m      |    [32m0[39m    |
|----------------------------------------------------|------------|-----------------|---------|--------------|---------|
|                                                                                                                      |
| [32mUnknown features: None[39m                                                                                               |
|                                                                                                                      |
|----------------------------------------------------------------------------------------------------------------------|


|----------------------------------------------------------------------------------------------------------------------|
|                                                                                                                      |
|                            Per-feature Summary (chrome, firefox, samsunginternet_android)                            |
|                                                                                                                      |
|------------------------------------------------------------------|------------|------------|-------------------------|
| Index                                                            |   chrome   |   firefox  | samsunginternet_android |
|------------------------------------------------------------------|------------|------------|-------------------------|
| at-rule:charset                                                  | [32mcompatible[39m | [32mcompatible[39m |        [32mcompatible[39m       |
| function:calc                                                    | [32mcompatible[39m | [32mcompatible[39m |        [32mcompatible[39m       |
| property:color:red                                               |   [33mflagged[39m  | [32mcompatible[39m |        [32mcompatible[39m       |
| selector:last-child                                              | [32mcompatible[39m | [32mcompatible[39m |        [32mcompatible[39m       |
|------------------------------------------------------------------|------------|------------|-------------------------|


|----------------------------------------------------------------------------------------------------------------------|
|                                                                                                                      |
|                                          Per-feature Summary (safari, edge)                                          |
|                                                                                                                      |
|--------------------------------------------------------------------------------------------|------------|------------|
| Index                                                                                      |   safari   |    edge    |
|--------------------------------------------------------------------------------------------|------------|------------|
| at-rule:charset                                                                            | [32mcompatible[39m | [32mcompatible[39m |
| function:calc                                                                              | [32mcompatible[39m | [32mcompatible[39m |
| property:color:red                                                                         | [32mcompatible[39m | [32mcompatible[39m |
| selector:last-child                                                                        | [32mcompatible[39m | [32mcompatible[39m |
|--------------------------------------------------------------------------------------------|------------|------------|


Overall Summary: [43m[1mWARN[22m[49m
 - [43m[1mWARN[22m[49m: example/filepath/eg-file.css"
`;

exports[`prints expected report for case: empty report 1`] = `
"|----------------------------------------------------------------------------------------------------------------------|
|                                         ▄ •▄       • ▌ ▄ ·.  ▄▄▄· ▄▄▄· ▄▄▄▄▄                                         |
|                                         █▌▄▌▪▪     ·██ ▐███▪▐█ ▄█▐█ ▀█ •██                                           |
|                                         ▐▀▀▄· ▄█▀▄ ▐█ ▌▐▌▐█· ██▀·▄█▀▀█  ▐█.▪                                         |
|                                         ▐█.█▌▐█▌.▐▌██ ██▌▐█▌▐█▪·•▐█ ▪▐▌ ▐█▌·                                         |
|                                         ·▀  ▀ ▀█▄▀▪▀▀  █▪▀▀▀.▀    ▀  ▀  ▀▀▀                                          |
|                                                                                                                      |
|                                         Copyright (c) 2023 Cameron McCormack                                         |
|----------------------------------------------------------------------------------------------------------------------|


Overall Summary: [42m[1mPASS[22m[49m
 - [42m[1mPASS[22m[49m: example/filepath/eg-file.css


Summary of all stylesheets:
########################################################################################################################
#                                                                                                                      #
#                                          [32mPASS: example/filepath/eg-file.css[39m                                          #
#                                                                                                                      #
########################################################################################################################
|----------------------------------------------------------------------------------------------------------------------|
|                                                                                                                      |
|                                                  High-level Summary                                                  |
|                                                                                                                      |
|----------------------------------------------------------------------------------------------------------------------|
| Index                                                                                                                |
|----------------------------------------------------------------------------------------------------------------------|
|----------------------------------------------------------------------------------------------------------------------|
|                                                                                                                      |
| [32mUnknown features: None[39m                                                                                               |
|                                                                                                                      |
|----------------------------------------------------------------------------------------------------------------------|


Overall Summary: [42m[1mPASS[22m[49m
 - [42m[1mPASS[22m[49m: example/filepath/eg-file.css"
`;

exports[`prints expected report for case: explicitly excluded per-feature summaries 1`] = `
"|----------------------------------------------------------------------------------------------------------------------|
|                                         ▄ •▄       • ▌ ▄ ·.  ▄▄▄· ▄▄▄· ▄▄▄▄▄                                         |
|                                         █▌▄▌▪▪     ·██ ▐███▪▐█ ▄█▐█ ▀█ •██                                           |
|                                         ▐▀▀▄· ▄█▀▄ ▐█ ▌▐▌▐█· ██▀·▄█▀▀█  ▐█.▪                                         |
|                                         ▐█.█▌▐█▌.▐▌██ ██▌▐█▌▐█▪·•▐█ ▪▐▌ ▐█▌·                                         |
|                                         ·▀  ▀ ▀█▄▀▪▀▀  █▪▀▀▀.▀    ▀  ▀  ▀▀▀                                          |
|                                                                                                                      |
|                                         Copyright (c) 2023 Cameron McCormack                                         |
|----------------------------------------------------------------------------------------------------------------------|


Overall Summary: [41m[1mFAIL[22m[49m
 - [41m[1mFAIL[22m[49m: example/filepath/eg-file.css


Summary of all stylesheets:
########################################################################################################################
#                                                                                                                      #
#                                          [41m[1mFAIL: example/filepath/eg-file.css[22m[49m                                          #
#                                                                                                                      #
########################################################################################################################
|----------------------------------------------------------------------------------------------------------------------|
|                                                                                                                      |
|                                                  High-level Summary                                                  |
|                                                                                                                      |
|----------------------------------------------------|------------|-----------------|---------|--------------|---------|
| Index                                              | compatible | partial-support | flagged | incompatible | unknown |
|----------------------------------------------------|------------|-----------------|---------|--------------|---------|
| chrome                                             |      [32m4[39m     |        [32m0[39m        |    [32m0[39m    |       [32m0[39m      |    [32m0[39m    |
|----------------------------------------------------|------------|-----------------|---------|--------------|---------|
|                                                                                                                      |
| [31mUnknown features:[39m                                                                                                    |
| [31m- property:not-a-real-feature:20px[39m                                                                                   |
|                                                                                                                      |
|----------------------------------------------------------------------------------------------------------------------|


Overall Summary: [41m[1mFAIL[22m[49m
 - [41m[1mFAIL[22m[49m: example/filepath/eg-file.css"
`;

exports[`prints expected report for case: multiple reports 1`] = `
"|----------------------------------------------------------------------------------------------------------------------|
|                                         ▄ •▄       • ▌ ▄ ·.  ▄▄▄· ▄▄▄· ▄▄▄▄▄                                         |
|                                         █▌▄▌▪▪     ·██ ▐███▪▐█ ▄█▐█ ▀█ •██                                           |
|                                         ▐▀▀▄· ▄█▀▄ ▐█ ▌▐▌▐█· ██▀·▄█▀▀█  ▐█.▪                                         |
|                                         ▐█.█▌▐█▌.▐▌██ ██▌▐█▌▐█▪·•▐█ ▪▐▌ ▐█▌·                                         |
|                                         ·▀  ▀ ▀█▄▀▪▀▀  █▪▀▀▀.▀    ▀  ▀  ▀▀▀                                          |
|                                                                                                                      |
|                                         Copyright (c) 2023 Cameron McCormack                                         |
|----------------------------------------------------------------------------------------------------------------------|


Overall Summary: [43m[1mWARN[22m[49m
 - [43m[1mWARN[22m[49m: example/filepath/eg-file.css
 - [42m[1mPASS[22m[49m: example/filepath/eg-file.css
 - [43m[1mWARN[22m[49m: example/filepath/eg-file.css


Summary of all stylesheets:
########################################################################################################################
#                                                                                                                      #
#                                          [43m[1mWARN: example/filepath/eg-file.css[22m[49m                                          #
#                                                                                                                      #
########################################################################################################################
|----------------------------------------------------------------------------------------------------------------------|
|                                                                                                                      |
|                                                  High-level Summary                                                  |
|                                                                                                                      |
|----------------------------------------------------|------------|-----------------|---------|--------------|---------|
| Index                                              | compatible | partial-support | flagged | incompatible | unknown |
|----------------------------------------------------|------------|-----------------|---------|--------------|---------|
| chrome                                             |      [32m3[39m     |        [32m0[39m        |    [33m1[39m    |       [32m0[39m      |    [32m0[39m    |
|----------------------------------------------------|------------|-----------------|---------|--------------|---------|
|                                                                                                                      |
| [32mUnknown features: None[39m                                                                                               |
|                                                                                                                      |
|----------------------------------------------------------------------------------------------------------------------|


|----------------------------------------------------------------------------------------------------------------------|
|                                                                                                                      |
|                                             Per-feature Summary (chrome)                                             |
|                                                                                                                      |
|---------------------------------------------------------------------------------------------------------|------------|
| Index                                                                                                   |   chrome   |
|---------------------------------------------------------------------------------------------------------|------------|
| at-rule:charset                                                                                         | [32mcompatible[39m |
| function:calc                                                                                           | [32mcompatible[39m |
| property:color:red                                                                                      |   [33mflagged[39m  |
| selector:last-child                                                                                     | [32mcompatible[39m |
|---------------------------------------------------------------------------------------------------------|------------|


########################################################################################################################
#                                                                                                                      #
#                                          [32mPASS: example/filepath/eg-file.css[39m                                          #
#                                                                                                                      #
########################################################################################################################
|----------------------------------------------------------------------------------------------------------------------|
|                                                                                                                      |
|                                                  High-level Summary                                                  |
|                                                                                                                      |
|----------------------------------------------------|------------|-----------------|---------|--------------|---------|
| Index                                              | compatible | partial-support | flagged | incompatible | unknown |
|----------------------------------------------------|------------|-----------------|---------|--------------|---------|
| chrome                                             |      [32m4[39m     |        [32m0[39m        |    [32m0[39m    |       [32m0[39m      |    [32m0[39m    |
|----------------------------------------------------|------------|-----------------|---------|--------------|---------|
|                                                                                                                      |
| [32mUnknown features: None[39m                                                                                               |
|                                                                                                                      |
|----------------------------------------------------------------------------------------------------------------------|


########################################################################################################################
#                                                                                                                      #
#                                          [43m[1mWARN: example/filepath/eg-file.css[22m[49m                                          #
#                                                                                                                      #
########################################################################################################################
|----------------------------------------------------------------------------------------------------------------------|
|                                                                                                                      |
|                                                  High-level Summary                                                  |
|                                                                                                                      |
|----------------------------------------------------|------------|-----------------|---------|--------------|---------|
| Index                                              | compatible | partial-support | flagged | incompatible | unknown |
|----------------------------------------------------|------------|-----------------|---------|--------------|---------|
| chrome                                             |      [32m3[39m     |        [33m1[39m        |    [32m0[39m    |       [32m0[39m      |    [32m0[39m    |
|----------------------------------------------------|------------|-----------------|---------|--------------|---------|
|                                                                                                                      |
| [32mUnknown features: None[39m                                                                                               |
|                                                                                                                      |
|----------------------------------------------------------------------------------------------------------------------|


|----------------------------------------------------------------------------------------------------------------------|
|                                                                                                                      |
|                                             Per-feature Summary (chrome)                                             |
|                                                                                                                      |
|----------------------------------------------------------------------------------------------------|-----------------|
| Index                                                                                              |      chrome     |
|----------------------------------------------------------------------------------------------------|-----------------|
| at-rule:charset                                                                                    |    [32mcompatible[39m   |
| function:calc                                                                                      |    [32mcompatible[39m   |
| property:color:red                                                                                 | [33mpartial-support[39m |
| selector:last-child                                                                                |    [32mcompatible[39m   |
|----------------------------------------------------------------------------------------------------|-----------------|


Overall Summary: [43m[1mWARN[22m[49m
 - [43m[1mWARN[22m[49m: example/filepath/eg-file.css
 - [42m[1mPASS[22m[49m: example/filepath/eg-file.css
 - [43m[1mWARN[22m[49m: example/filepath/eg-file.css"
`;

exports[`prints expected report for case: non-default rules 1`] = `
"|----------------------------------------------------------------------------------------------------------------------|
|                                         ▄ •▄       • ▌ ▄ ·.  ▄▄▄· ▄▄▄· ▄▄▄▄▄                                         |
|                                         █▌▄▌▪▪     ·██ ▐███▪▐█ ▄█▐█ ▀█ •██                                           |
|                                         ▐▀▀▄· ▄█▀▄ ▐█ ▌▐▌▐█· ██▀·▄█▀▀█  ▐█.▪                                         |
|                                         ▐█.█▌▐█▌.▐▌██ ██▌▐█▌▐█▪·•▐█ ▪▐▌ ▐█▌·                                         |
|                                         ·▀  ▀ ▀█▄▀▪▀▀  █▪▀▀▀.▀    ▀  ▀  ▀▀▀                                          |
|                                                                                                                      |
|                                         Copyright (c) 2023 Cameron McCormack                                         |
|----------------------------------------------------------------------------------------------------------------------|


Overall Summary: [41m[1mFAIL[22m[49m
 - [43m[1mWARN[22m[49m: example/filepath/eg-file.css
 - [41m[1mFAIL[22m[49m: example/filepath/eg-file.css
 - [41m[1mFAIL[22m[49m: example/filepath/eg-file.css


Summary of all stylesheets:
########################################################################################################################
#                                                                                                                      #
#                                          [43m[1mWARN: example/filepath/eg-file.css[22m[49m                                          #
#                                                                                                                      #
########################################################################################################################
|----------------------------------------------------------------------------------------------------------------------|
|                                                                                                                      |
|                                                  High-level Summary                                                  |
|                                                                                                                      |
|----------------------------------------------------|------------|-----------------|---------|--------------|---------|
| Index                                              | compatible | partial-support | flagged | incompatible | unknown |
|----------------------------------------------------|------------|-----------------|---------|--------------|---------|
| chrome                                             |      [31m3[39m     |        [32m0[39m        |    [33m1[39m    |       [32m0[39m      |    [32m0[39m    |
|----------------------------------------------------|------------|-----------------|---------|--------------|---------|
|                                                                                                                      |
| [32mUnknown features: None[39m                                                                                               |
|                                                                                                                      |
|----------------------------------------------------------------------------------------------------------------------|


|----------------------------------------------------------------------------------------------------------------------|
|                                                                                                                      |
|                                             Per-feature Summary (chrome)                                             |
|                                                                                                                      |
|---------------------------------------------------------------------------------------------------------|------------|
| Index                                                                                                   |   chrome   |
|---------------------------------------------------------------------------------------------------------|------------|
| at-rule:charset                                                                                         | [31mcompatible[39m |
| function:calc                                                                                           | [31mcompatible[39m |
| property:color:red                                                                                      |   [33mflagged[39m  |
| selector:last-child                                                                                     | [31mcompatible[39m |
|---------------------------------------------------------------------------------------------------------|------------|


########################################################################################################################
#                                                                                                                      #
#                                          [41m[1mFAIL: example/filepath/eg-file.css[22m[49m                                          #
#                                                                                                                      #
########################################################################################################################
|----------------------------------------------------------------------------------------------------------------------|
|                                                                                                                      |
|                                                  High-level Summary                                                  |
|                                                                                                                      |
|----------------------------------------------------|------------|-----------------|---------|--------------|---------|
| Index                                              | compatible | partial-support | flagged | incompatible | unknown |
|----------------------------------------------------|------------|-----------------|---------|--------------|---------|
| chrome                                             |      [31m3[39m     |        [32m0[39m        |    [32m0[39m    |       [33m1[39m      |    [32m0[39m    |
|----------------------------------------------------|------------|-----------------|---------|--------------|---------|
|                                                                                                                      |
| [32mUnknown features: None[39m                                                                                               |
|                                                                                                                      |
|----------------------------------------------------------------------------------------------------------------------|


|----------------------------------------------------------------------------------------------------------------------|
|                                                                                                                      |
|                                             Per-feature Summary (chrome)                                             |
|                                                                                                                      |
|-------------------------------------------------------------------------------------------------------|--------------|
| Index                                                                                                 |    chrome    |
|-------------------------------------------------------------------------------------------------------|--------------|
| at-rule:charset                                                                                       |  [31mcompatible[39m  |
| function:calc                                                                                         |  [31mcompatible[39m  |
| property:color:red                                                                                    | [33mincompatible[39m |
| selector:last-child                                                                                   |  [31mcompatible[39m  |
|-------------------------------------------------------------------------------------------------------|--------------|


########################################################################################################################
#                                                                                                                      #
#                                          [41m[1mFAIL: example/filepath/eg-file.css[22m[49m                                          #
#                                                                                                                      #
########################################################################################################################
|----------------------------------------------------------------------------------------------------------------------|
|                                                                                                                      |
|                                                  High-level Summary                                                  |
|                                                                                                                      |
|----------------------------------------------------|------------|-----------------|---------|--------------|---------|
| Index                                              | compatible | partial-support | flagged | incompatible | unknown |
|----------------------------------------------------|------------|-----------------|---------|--------------|---------|
| chrome                                             |      [31m4[39m     |        [32m0[39m        |    [32m0[39m    |       [32m0[39m      |    [32m0[39m    |
|----------------------------------------------------|------------|-----------------|---------|--------------|---------|
|                                                                                                                      |
| [32mUnknown features:[39m                                                                                                    |
| [32m- property:not-a-real-feature:20px[39m                                                                                   |
|                                                                                                                      |
|----------------------------------------------------------------------------------------------------------------------|


|----------------------------------------------------------------------------------------------------------------------|
|                                                                                                                      |
|                                             Per-feature Summary (chrome)                                             |
|                                                                                                                      |
|---------------------------------------------------------------------------------------------------------|------------|
| Index                                                                                                   |   chrome   |
|---------------------------------------------------------------------------------------------------------|------------|
| at-rule:charset                                                                                         | [31mcompatible[39m |
| function:calc                                                                                           | [31mcompatible[39m |
| property:color:red                                                                                      | [31mcompatible[39m |
| selector:last-child                                                                                     | [31mcompatible[39m |
|---------------------------------------------------------------------------------------------------------|------------|


Overall Summary: [41m[1mFAIL[22m[49m
 - [43m[1mWARN[22m[49m: example/filepath/eg-file.css
 - [41m[1mFAIL[22m[49m: example/filepath/eg-file.css
 - [41m[1mFAIL[22m[49m: example/filepath/eg-file.css"
`;

exports[`prints expected report for case: one compatible report 1`] = `
"|----------------------------------------------------------------------------------------------------------------------|
|                                         ▄ •▄       • ▌ ▄ ·.  ▄▄▄· ▄▄▄· ▄▄▄▄▄                                         |
|                                         █▌▄▌▪▪     ·██ ▐███▪▐█ ▄█▐█ ▀█ •██                                           |
|                                         ▐▀▀▄· ▄█▀▄ ▐█ ▌▐▌▐█· ██▀·▄█▀▀█  ▐█.▪                                         |
|                                         ▐█.█▌▐█▌.▐▌██ ██▌▐█▌▐█▪·•▐█ ▪▐▌ ▐█▌·                                         |
|                                         ·▀  ▀ ▀█▄▀▪▀▀  █▪▀▀▀.▀    ▀  ▀  ▀▀▀                                          |
|                                                                                                                      |
|                                         Copyright (c) 2023 Cameron McCormack                                         |
|----------------------------------------------------------------------------------------------------------------------|


Overall Summary: [42m[1mPASS[22m[49m
 - [42m[1mPASS[22m[49m: example/filepath/eg-file.css


Summary of all stylesheets:
########################################################################################################################
#                                                                                                                      #
#                                          [32mPASS: example/filepath/eg-file.css[39m                                          #
#                                                                                                                      #
########################################################################################################################
|----------------------------------------------------------------------------------------------------------------------|
|                                                                                                                      |
|                                                  High-level Summary                                                  |
|                                                                                                                      |
|----------------------------------------------------|------------|-----------------|---------|--------------|---------|
| Index                                              | compatible | partial-support | flagged | incompatible | unknown |
|----------------------------------------------------|------------|-----------------|---------|--------------|---------|
| chrome                                             |      [32m4[39m     |        [32m0[39m        |    [32m0[39m    |       [32m0[39m      |    [32m0[39m    |
|----------------------------------------------------|------------|-----------------|---------|--------------|---------|
|                                                                                                                      |
| [32mUnknown features: None[39m                                                                                               |
|                                                                                                                      |
|----------------------------------------------------------------------------------------------------------------------|


Overall Summary: [42m[1mPASS[22m[49m
 - [42m[1mPASS[22m[49m: example/filepath/eg-file.css"
`;

exports[`prints expected report for case: one report with unknown feature 1`] = `
"|----------------------------------------------------------------------------------------------------------------------|
|                                         ▄ •▄       • ▌ ▄ ·.  ▄▄▄· ▄▄▄· ▄▄▄▄▄                                         |
|                                         █▌▄▌▪▪     ·██ ▐███▪▐█ ▄█▐█ ▀█ •██                                           |
|                                         ▐▀▀▄· ▄█▀▄ ▐█ ▌▐▌▐█· ██▀·▄█▀▀█  ▐█.▪                                         |
|                                         ▐█.█▌▐█▌.▐▌██ ██▌▐█▌▐█▪·•▐█ ▪▐▌ ▐█▌·                                         |
|                                         ·▀  ▀ ▀█▄▀▪▀▀  █▪▀▀▀.▀    ▀  ▀  ▀▀▀                                          |
|                                                                                                                      |
|                                         Copyright (c) 2023 Cameron McCormack                                         |
|----------------------------------------------------------------------------------------------------------------------|


Overall Summary: [41m[1mFAIL[22m[49m
 - [41m[1mFAIL[22m[49m: example/filepath/eg-file.css


Summary of all stylesheets:
########################################################################################################################
#                                                                                                                      #
#                                          [41m[1mFAIL: example/filepath/eg-file.css[22m[49m                                          #
#                                                                                                                      #
########################################################################################################################
|----------------------------------------------------------------------------------------------------------------------|
|                                                                                                                      |
|                                                  High-level Summary                                                  |
|                                                                                                                      |
|----------------------------------------------------|------------|-----------------|---------|--------------|---------|
| Index                                              | compatible | partial-support | flagged | incompatible | unknown |
|----------------------------------------------------|------------|-----------------|---------|--------------|---------|
| chrome                                             |      [32m4[39m     |        [32m0[39m        |    [32m0[39m    |       [32m0[39m      |    [32m0[39m    |
|----------------------------------------------------|------------|-----------------|---------|--------------|---------|
|                                                                                                                      |
| [31mUnknown features:[39m                                                                                                    |
| [31m- property:not-a-real-feature:20px[39m                                                                                   |
|                                                                                                                      |
|----------------------------------------------------------------------------------------------------------------------|


|----------------------------------------------------------------------------------------------------------------------|
|                                                                                                                      |
|                                             Per-feature Summary (chrome)                                             |
|                                                                                                                      |
|---------------------------------------------------------------------------------------------------------|------------|
| Index                                                                                                   |   chrome   |
|---------------------------------------------------------------------------------------------------------|------------|
| at-rule:charset                                                                                         | [32mcompatible[39m |
| function:calc                                                                                           | [32mcompatible[39m |
| property:color:red                                                                                      | [32mcompatible[39m |
| selector:last-child                                                                                     | [32mcompatible[39m |
|---------------------------------------------------------------------------------------------------------|------------|


Overall Summary: [41m[1mFAIL[22m[49m
 - [41m[1mFAIL[22m[49m: example/filepath/eg-file.css"
`;

exports[`prints expected report for case: very long CSS identifier report 1`] = `
"|----------------------------------------------------------------------------------------------------------------------|
|                                         ▄ •▄       • ▌ ▄ ·.  ▄▄▄· ▄▄▄· ▄▄▄▄▄                                         |
|                                         █▌▄▌▪▪     ·██ ▐███▪▐█ ▄█▐█ ▀█ •██                                           |
|                                         ▐▀▀▄· ▄█▀▄ ▐█ ▌▐▌▐█· ██▀·▄█▀▀█  ▐█.▪                                         |
|                                         ▐█.█▌▐█▌.▐▌██ ██▌▐█▌▐█▪·•▐█ ▪▐▌ ▐█▌·                                         |
|                                         ·▀  ▀ ▀█▄▀▪▀▀  █▪▀▀▀.▀    ▀  ▀  ▀▀▀                                          |
|                                                                                                                      |
|                                         Copyright (c) 2023 Cameron McCormack                                         |
|----------------------------------------------------------------------------------------------------------------------|


Overall Summary: [43m[1mWARN[22m[49m
 - [43m[1mWARN[22m[49m: example/filepath/eg-file.css


Summary of all stylesheets:
########################################################################################################################
#                                                                                                                      #
#                                          [43m[1mWARN: example/filepath/eg-file.css[22m[49m                                          #
#                                                                                                                      #
########################################################################################################################
|----------------------------------------------------------------------------------------------------------------------|
|                                                                                                                      |
|                                                  High-level Summary                                                  |
|                                                                                                                      |
|----------------------------------------------------|------------|-----------------|---------|--------------|---------|
| Index                                              | compatible | partial-support | flagged | incompatible | unknown |
|----------------------------------------------------|------------|-----------------|---------|--------------|---------|
| chrome                                             |      [32m4[39m     |        [32m0[39m        |    [33m1[39m    |       [32m0[39m      |    [32m0[39m    |
|----------------------------------------------------|------------|-----------------|---------|--------------|---------|
|                                                                                                                      |
| [32mUnknown features: None[39m                                                                                               |
|                                                                                                                      |
|----------------------------------------------------------------------------------------------------------------------|


|----------------------------------------------------------------------------------------------------------------------|
|                                                                                                                      |
|                                             Per-feature Summary (chrome)                                             |
|                                                                                                                      |
|---------------------------------------------------------------------------------------------------------|------------|
| Index                                                                                                   |   chrome   |
|---------------------------------------------------------------------------------------------------------|------------|
| at-rule:charset                                                                                         | [32mcompatible[39m |
| function:calc                                                                                           | [32mcompatible[39m |
| property:color:red                                                                                      |   [33mflagged[39m  |
| ...ying value that will certainly be truncated as it's so extremely, extraordinarily, phenomenally long | [32mcompatible[39m |
| selector:last-child                                                                                     | [32mcompatible[39m |
|---------------------------------------------------------------------------------------------------------|------------|


Overall Summary: [43m[1mWARN[22m[49m
 - [43m[1mWARN[22m[49m: example/filepath/eg-file.css"
`;
